--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-VITE_API_BASE_URL=http://192.168.1.16:8000
-# VITE_API_BASE_URL=http://10.228.45.50:8000
+# VITE_API_BASE_URL=http://192.168.1.10:8000
+VITE_API_BASE_URL=https://admin.sindhuura.com
+VITE_WS_BASE_URL=wss://admin.sindhuura.com
 # VITE_RAZORPAY_KEY_ID=rzp_test_xxxx
 VITE_RAZORPAY_KEY_ID=rzp_test_S1exS0E1NrxWeT
