--- a/.env
+++ b/.env
@@ -1,5 +1,12 @@
 # VITE_API_BASE_URL=http://192.168.1.10:8000
 VITE_API_BASE_URL=https://admin.sindhuura.com
 VITE_WS_BASE_URL=wss://admin.sindhuura.com
+# VITE_WS_BASE_URL=wss://192.168.1.10:8001
 # VITE_RAZORPAY_KEY_ID=rzp_test_xxxx
 VITE_RAZORPAY_KEY_ID=rzp_test_S1exS0E1NrxWeT
+VITE_FIREBASE_API_KEY=AIzaSyDdnpop__1A6m5ba-mZ0e-UXEvDFPNE2LI
+VITE_FIREBASE_AUTH_DOMAIN=sindhuura-b98fa.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=sindhuura-b98fa
+VITE_FIREBASE_MESSAGING_SENDER_ID=466468807087
+VITE_FIREBASE_APP_ID=1:466468807087:web:6ba0fa291c90459d1b0f5a
+VITE_FIREBASE_VAPID_KEY=BN7zEZpVhAT-FhMRQJkI2MhmarRu8iPHMceu4Ga-fL11OT9f3boOEwuRDafCaxualdc-c2zuDADdCY4vdMr2sCg  
